WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
68739
We shouldn't have to update compositing state in order to hit test RenderLayers
https://bugs.webkit.org/show_bug.cgi?id=68739
Summary
We shouldn't have to update compositing state in order to hit test RenderLayers
James Robinson
Reported
2011-09-23 15:18:57 PDT
Currently RenderLayer::hitTestLayer updates compositing layers. This doesn't really make much sense, compositing and hit testing are orthogonal concepts. It should be safe to remove this logic. We should also make sure we have sufficient test coverage in this area.
Attachments
Add attachment
proposed patch, testcase, etc.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug