Remove CompositingUpdateOnHitTest logic since hit testing does not depend on compositing

Related to https://bugs.webkit.org/show_bug.cgi?id=68739. Nobody knows why this code
is there - it was from the initial compositor support landing in WebCore. Our
hit testing logic definitely doesn't need this.


Review URL: https://chromiumcodereview.appspot.com/13814026

git-svn-id: svn://svn.chromium.org/blink/trunk@147981 bbb929c8-8fbe-4397-9dbb-9b2b20218538

Former-commit-id: ba1cd1c34c1b22b3244adda66c9394d37302fe5a