third_party/WebKit/Source/WebCore/rendering/RenderLayerCompositor.h
@@ -47,7 +47,6 @@ class RenderVideo;
 enum CompositingUpdateType {
     CompositingUpdateAfterStyleChange,
     CompositingUpdateAfterLayout,
-    CompositingUpdateOnHitTest,
     CompositingUpdateOnScroll,
     CompositingUpdateOnCompositedScroll
 };
